# riscv-emu

./: .gitignore  Cargo.toml  LICENSE  Readme.md
.github/: copilot-instructions.md
src/: bus.rs  cpu.rs  decode.rs  error.rs  execute.rs  lib.rs  main.rs  memory.rs  recorder.rs  replayer.rs  snapshot.rs  trace.rs
src/isa/: mod.rs  rv64i.rs  zicsr.rs
