[package]
name = "riscv_emu"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
bincode = "1"
flate2 = "1"

[dev-dependencies]
rstest = "0.23"
